--- a/app/src/main/res/drawable/buttonshape_down.xml
+++ b/app/src/main/res/drawable/buttonshape_down.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#a0f5f510" android:endColor="#a0f5f5b0"
+    <gradient android:startColor="@color/colorPrimary" android:endColor="@color/colorPrimary"
         android:angle="270"/> 
         <corners
     android:bottomRightRadius="0dp"
     android:bottomLeftRadius="0dp"
     android:topLeftRadius="0dp"
     android:topRightRadius="0dp"/> 
-    <size android:height="100dp" android:width="100dp"></size>
+    <size android:height="80dp" android:width="80dp"></size>
 </shape>
