--- a/app/src/main/res/layout/activity_insist.xml
+++ b/app/src/main/res/layout/activity_insist.xml
@@ -4,11 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <io.codetail.widget.RevealFrameLayout
         android:id="@+id/container_frame"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
 
         <LinearLayout
@@ -23,35 +25,20 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"/>
 
-        <LinearLayout
+
+
+        <io.codetail.widget.RevealLinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="30">
-
             <LinearLayout
                 android:id="@+id/insist_top_panel_ll"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="5"
-                android:orientation="vertical"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true">
-
-                <com.example.vizax.with.customView.BaseToolBar
-                    app:centerText="坚持"
-                    app:leftIcon="@drawable/ic_arrow_back_black_36dp"
-                    app:rightIcon="@drawable/ic_delete_forever_black_36dp"
-                    android:background="@color/colorPrimary"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:id="@+id/insist_baseToolBar"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true">
-                </com.example.vizax.with.customView.BaseToolBar>
-
+                android:orientation="vertical">
+                <include layout="@layout/base_toolbar"/>
                 <TextView
                     android:id="@+id/title_id"
                     android:layout_width="match_parent"
@@ -74,14 +61,6 @@
                     android:layout_weight="19"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-
-                    <Button
-                        android:id="@+id/set_date_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="#00ffffff"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true" />
                     <com.example.vizax.with.customView.ReboundScrollView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -93,6 +72,16 @@
 
                             />
                     </com.example.vizax.with.customView.ReboundScrollView>
+                    <Button
+                        android:id="@+id/set_date_btn"
+                        android:layout_width="80dp"
+                        android:layout_height="40dp"
+                        android:background="#00ffffff"
+                        android:clickable="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:enabled="true"/>
+
 
                 </RelativeLayout>
 
@@ -169,11 +158,10 @@
 
 
 
-        </LinearLayout>
+        </io.codetail.widget.RevealLinearLayout>
+
 
     </io.codetail.widget.RevealFrameLayout>
-
-
 
     <ScrollView
         android:id="@+id/insist_scrollView"
