--- a/app/src/main/res/layout/add_item_dialog.xml
+++ b/app/src/main/res/layout/add_item_dialog.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="3dp">
+    android:layout_width="300dp"
+    android:layout_height="500dp"
+    android:orientation="vertical">
 
     <LinearLayout
+        android:layout_marginTop="17dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="start"
@@ -58,10 +57,7 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
-
-
             <!-- 定义HorizontalScrollView，为里面的组件添加水平滚动条 -->
-
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/insist_ic_bg_rcyVi"
                             android:layout_width="match_parent"
@@ -71,20 +67,18 @@
                         </android.support.v7.widget.RecyclerView>
 
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp">
+        android:layout_marginBottom="0dp"
+        android:layout_gravity="center">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center|center_horizontal"
-            android:layout_weight="1">
+            android:gravity="center|center_horizontal">
             <Button
                 android:id="@+id/addItem_cancel_btn"
                 android:layout_width="wrap_content"
@@ -106,15 +100,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center|center_horizontal"
-            android:layout_weight="1">
+            >
             <Button
                 android:id="@+id/addItem_cfm_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#00000000"
                 android:textSize="15dp"
-                android:text="确定"
-                android:onClick="yy"/>
+                android:text="确定" />
         </LinearLayout>
 
     </LinearLayout>
