--- a/app/src/main/res/layout/add_item_dialog_item.xml
+++ b/app/src/main/res/layout/add_item_dialog_item.xml
@@ -14,6 +14,6 @@
         android:layout_height="60dp"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/item_up"/>
+        android:background="@drawable/buttonshape"/>
 
 </LinearLayout>
